@@ -348,6 +348,7 @@ static const OptionInfo
     { "  radial-blur", 0, UndefinedOptionFlag, MagickFalse },
     { "  raise", 0, UndefinedOptionFlag, MagickFalse },
     { "  random-threshold", 0, UndefinedOptionFlag, MagickFalse },
+    { "  range-threshold", 0, UndefinedOptionFlag, MagickFalse },
     { "  resample", 0, UndefinedOptionFlag, MagickFalse },
     { "  resize", 0, UndefinedOptionFlag, MagickFalse },
     { "  roll", 0, UndefinedOptionFlag, MagickFalse },
@@ -927,6 +928,8 @@ static const OptionInfo
     { "+raise", 1L, SimpleOperatorFlag, MagickFalse },
     { "+random-threshold", 1L, DeprecateOptionFlag, MagickTrue },
     { "-random-threshold", 1L, SimpleOperatorFlag, MagickFalse },
+    { "+range-threshold", 1L, DeprecateOptionFlag, MagickTrue },
+    { "-range-threshold", 1L, SimpleOperatorFlag, MagickFalse },
     { "-read", 1L, NoImageOperatorFlag | NeverInterpretArgsFlag, MagickFalse },
     { "+read-mask", 0L, SimpleOperatorFlag | NeverInterpretArgsFlag, MagickFalse },
     { "-read-mask", 1L, SimpleOperatorFlag | NeverInterpretArgsFlag, MagickFalse },
