@@ -218,6 +218,8 @@ Image Operators:
   \-raise value         lighten/darken image edges to create a 3-D effect
   \-random-threshold low,high
                        random threshold the image
+  \-range-threshold values
+                       combine hard and soft thresholding
   \-region geometry     apply options to a portion of the image
   \-render              render vector graphics
   \-resample geometry   change the resolution of an image
